libs/pigment/KoOptimizedRgbPixelDataScalerU8ToU16FactoryImpl.cpp
@@ -9,9 +9,9 @@
 #include "KoOptimizedRgbPixelDataScalerU8ToU16.h"
 
 template<Vc::Implementation _impl>
-KoOptimizedRgbPixelDataScalerU8ToU16Base *KoOptimizedRgbPixelDataScalerU8ToU16FactoryImpl::create(int)
+KoOptimizedRgbPixelDataScalerU8ToU16Base *KoOptimizedRgbPixelDataScalerU8ToU16FactoryImpl::create(int channelsPerPixel)
 {
-    return new KoOptimizedRgbPixelDataScalerU8ToU16<_impl>();
+    return new KoOptimizedRgbPixelDataScalerU8ToU16<_impl>(channelsPerPixel);
 }
 
 template KoOptimizedRgbPixelDataScalerU8ToU16Base *KoOptimizedRgbPixelDataScalerU8ToU16FactoryImpl::create<Vc::CurrentImplementation::current()>(int);
